examples/errors/header/duplicate_x.abc
X:1
X:2
T:Duplicate X Field
K:C
% H003: Duplicate reference number
CDEF|
